--- a/index.css
+++ b/index.css
@@ -1,3 +1,36 @@
-#heading{
-    color: red;
+.app{
+    height: max-content;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid grey;
+    /* background-color: black; */
+}
+
+.logo-container{
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+}
+
+.logo-container > img{
+    width: 100px;
+    padding: 10px;
+}
+
+.nav-list > ul{
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-list > ul > li{
+    padding: 0px 20px;
+    font-size: 2rem;
+}
+
+.nav-list > ul > li > img{
+    width: 50px;
 }
