--- a/index.css
+++ b/index.css
@@ -66,8 +66,8 @@
 
 .rest-img{
     width: 300px;
+    height: 300px;
     max-width: 100%;
-    height: auto;
     border-radius: 10px;
 }
 
@@ -82,6 +82,7 @@
 .rest-name{
    margin: 1rem 0rem 0.5rem 0rem;
    padding: 0;
+   font-size: 2rem;
 }
 
 .rest-rating-time{
