--- a/index.css
+++ b/index.css
@@ -51,12 +51,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap ;
+    justify-content: center;
 }
 
 .rest-card{
-    width: 300px;
-    padding: 10px;
+    flex: 1 1 300px;
+    max-width: 300px;
     box-sizing: border-box;
+    margin: 20px;
 }
 
 .rest-card:hover{
@@ -109,4 +111,50 @@
     color: #676a6d;
     margin: 0;
     padding: 0
+}
+
+/* Shimmer Loader Css */
+.loader-cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.food-cards{
+    flex: 1 1 250px;
+    max-width: 250px;
+    padding: 16px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #fff;
+}
+
+.card-img{
+    width: 100%;
+    height: 150px;
+    background-image: linear-gradient(to right, #f6f7f9 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-size: 200% auto;
+    animation: shimmerAnimartion 1.5s infinite linear;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.card-info{
+    width: 100%;
+    height: 16px;
+    background-image: linear-gradient(to right, #f6f7f9 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-size: 200% auto;
+    animation: shimmerAnimartion 1.5s infinite linear;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+@keyframes shimmerAnimartion{
+    0%{
+        background-position: -200% 0;
+    }
+    100%{
+        background-position: 200% 0;
+    }
 }
